{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 435,
  "lineage": "32b6b7d2-75c2-3022-5a73-0e4b5ff10d09",
  "resources": [
    {
      "module": "module.EC2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2Machine",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-036841078a4b68e14",
            "arn": "arn:aws:ec2:us-east-2:207567784532:instance/i-0ef5dbc492de7b710",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ef5dbc492de7b710",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_ec2_terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d0b88fe0d7ad4c55",
            "private_dns": "ip-11-0-1-44.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.1.44",
            "public_ip": "18.227.10.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-066f4fecb4e132476",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00d769b34d6de6990",
            "tags": {
              "Name": "Python_Flask_Deployment"
            },
            "tags_all": {
              "Name": "Python_Flask_Deployment"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0535526fec80ccf5c",
              "sg-068cfddb1a4917e30"
            ]
          },
          "dependencies": [
            "module.Networking.aws_subnet.Public_Subnet",
            "module.Networking.aws_vpc.Deployment_VPC",
            "module.Security-Groups.aws_security_group.Jenkins_SG_8080",
            "module.Security-Groups.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:207567784532:internet-gateway/igw-07cffdb51b7ac596b",
            "id": "igw-07cffdb51b7ac596b",
            "owner_id": "207567784532",
            "tags": {
              "Name": "Internet Gateway"
            },
            "tags_all": {
              "Name": "Internet Gateway"
            },
            "vpc_id": "vpc-092b33ab10a66ed82"
          },
          "dependencies": [
            "module.Networking.aws_vpc.Deployment_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private_Route_Table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:207567784532:route-table/rtb-0c397bf9aa5fe55de",
            "id": "rtb-0c397bf9aa5fe55de",
            "owner_id": "207567784532",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Deployment_VPC-Private_Route_Table"
            },
            "tags_all": {
              "Name": "Deployment_VPC-Private_Route_Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-092b33ab10a66ed82"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Networking.aws_vpc.Deployment_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_Route_Table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:207567784532:route-table/rtb-042e4822d7a211075",
            "id": "rtb-042e4822d7a211075",
            "owner_id": "207567784532",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07cffdb51b7ac596b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Deployment_VPC-Public_Route_Table"
            },
            "tags_all": {
              "Name": "Deployment_VPC-Public_Route_Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-092b33ab10a66ed82"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Networking.aws_internet_gateway.IG",
            "module.Networking.aws_vpc.Deployment_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RouteTableAssociation_PrivateSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0c71a834b2db33f",
            "route_table_id": "rtb-0c397bf9aa5fe55de",
            "subnet_id": "subnet-0c1809142ffee0f5f"
          },
          "dependencies": [
            "module.Networking.aws_route_table.Private_Route_Table",
            "module.Networking.aws_subnet.Private_Subnet",
            "module.Networking.aws_vpc.Deployment_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076a297da818fc38c",
            "route_table_id": "rtb-0c397bf9aa5fe55de",
            "subnet_id": "subnet-04330c6a02562ea83"
          },
          "dependencies": [
            "module.Networking.aws_route_table.Private_Route_Table",
            "module.Networking.aws_subnet.Private_Subnet",
            "module.Networking.aws_vpc.Deployment_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RouteTableAssociation_PublicSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a24382dc7e53003c",
            "route_table_id": "rtb-042e4822d7a211075",
            "subnet_id": "subnet-00d769b34d6de6990"
          },
          "dependencies": [
            "module.Networking.aws_internet_gateway.IG",
            "module.Networking.aws_route_table.Public_Route_Table",
            "module.Networking.aws_subnet.Public_Subnet",
            "module.Networking.aws_vpc.Deployment_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02332ae73f1306c9f",
            "route_table_id": "rtb-042e4822d7a211075",
            "subnet_id": "subnet-094e8a08e12b92f06"
          },
          "dependencies": [
            "module.Networking.aws_internet_gateway.IG",
            "module.Networking.aws_route_table.Public_Route_Table",
            "module.Networking.aws_subnet.Public_Subnet",
            "module.Networking.aws_vpc.Deployment_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:207567784532:subnet/subnet-0c1809142ffee0f5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "11.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1809142ffee0f5f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "207567784532",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_Subnet-1"
            },
            "tags_all": {
              "Name": "Private_Subnet-1"
            },
            "vpc_id": "vpc-092b33ab10a66ed82"
          },
          "dependencies": [
            "module.Networking.aws_vpc.Deployment_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:207567784532:subnet/subnet-04330c6a02562ea83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "11.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04330c6a02562ea83",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "207567784532",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_Subnet-2"
            },
            "tags_all": {
              "Name": "Private_Subnet-2"
            },
            "vpc_id": "vpc-092b33ab10a66ed82"
          },
          "dependencies": [
            "module.Networking.aws_vpc.Deployment_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:207567784532:subnet/subnet-00d769b34d6de6990",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "11.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d769b34d6de6990",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "207567784532",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_Subnet-1"
            },
            "tags_all": {
              "Name": "Public_Subnet-1"
            },
            "vpc_id": "vpc-092b33ab10a66ed82"
          },
          "dependencies": [
            "module.Networking.aws_vpc.Deployment_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:207567784532:subnet/subnet-094e8a08e12b92f06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "11.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094e8a08e12b92f06",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "207567784532",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_Subnet-2"
            },
            "tags_all": {
              "Name": "Public_Subnet-2"
            },
            "vpc_id": "vpc-092b33ab10a66ed82"
          },
          "dependencies": [
            "module.Networking.aws_vpc.Deployment_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Deployment_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:207567784532:vpc/vpc-092b33ab10a66ed82",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-0dd4c6c8dbced3abc",
            "default_route_table_id": "rtb-005fbf66198352ddf",
            "default_security_group_id": "sg-0919427c2ecd68e0c",
            "dhcp_options_id": "dopt-080406367b8a172ef",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-092b33ab10a66ed82",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-005fbf66198352ddf",
            "owner_id": "207567784532",
            "tags": {
              "Name": "Deployment_VPC"
            },
            "tags_all": {
              "Name": "Deployment_VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.Security-Groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Jenkins_SG_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:207567784532:security-group/sg-0535526fec80ccf5c",
            "description": "Enable the Port 5000",
            "egress": [],
            "id": "sg-0535526fec80ccf5c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 5000 Port from anywhere",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "Allow port 5000",
            "name_prefix": "",
            "owner_id": "207567784532",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security Group to allow Port-5000"
            },
            "tags_all": {
              "Name": "Security Group to allow Port-5000"
            },
            "timeouts": null,
            "vpc_id": "vpc-092b33ab10a66ed82"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Networking.aws_vpc.Deployment_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Security-Groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "RDS_3306",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:207567784532:security-group/sg-08e62ac2c171debb5",
            "description": "Enable the Port 3306 for RDS",
            "egress": [],
            "id": "sg-08e62ac2c171debb5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 3306 Port from anywhere",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "RDS_3306",
            "name_prefix": "",
            "owner_id": "207567784532",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security Group to allow Port-3306"
            },
            "tags_all": {
              "Name": "Security Group to allow Port-3306"
            },
            "timeouts": null,
            "vpc_id": "vpc-092b33ab10a66ed82"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Networking.aws_vpc.Deployment_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Security-Groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg_ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:207567784532:security-group/sg-068cfddb1a4917e30",
            "description": "Enable the Port 22(SSH) \u0026 Port 80(http)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outgoing request",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-068cfddb1a4917e30",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP request from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow remote SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow remote SSH from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG for EC2 to enable SSH(22), HTTPS(443) and HTTP(80)",
            "name_prefix": "",
            "owner_id": "207567784532",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security Group to allow SSH(22) and HTTP(80)"
            },
            "tags_all": {
              "Name": "Security Group to allow SSH(22) and HTTP(80)"
            },
            "timeouts": null,
            "vpc_id": "vpc-092b33ab10a66ed82"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Networking.aws_vpc.Deployment_VPC"
          ]
        }
      ]
    }
  ]
}